# crygotchi_rust_old

./: .gitignore  Cargo.toml  README.md  TODO.md
assets/: .gitignore
assets/Meshes/: Cursor.glb
assets/Mods/test_mod/tiles/: dirt.tiles.ron  grass.tiles.ron
mods/test_mod/: blocks.tiles.toml
src/: lib.rs  main.rs
src/core/: mod.rs
src/core/builder/: builder.rs
src/core/cursor/: cursor_actions.rs  cursor_movement.rs  mod.rs  world_cursor.rs
src/core/mods/: mod.rs  modloader.rs
src/core/room/: mod.rs  room.rs  room_debug.rs  room_tile.rs
src/debug/: debug_assets.rs  debug_gizmos.rs  debug_resources.rs  debug_state.rs  debug_tabs.rs  debug_ui.rs  mod.rs
