[package]
name = "crygotchi"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy-inspector-egui = { version = "0.18.3", features = ["highlight_changes"] }
bevy-scene-hook = "6.0.0"
bevy_asset_loader = { version = "0.16.0", features = ["3d"] }
bevy_common_assets = { version = "0.6.0", features = ["toml"] }
bevy_egui = "0.20"
block-mesh = "0.2.0"
egui_dock = { version = "0.4.2", features = ["serde"] }
leafwing-input-manager = { version = "0.9.1", features = ["egui"] }
serde = { version = "1.0.159", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
